--- a/assets/css/Mystyles.css
+++ b/assets/css/Mystyles.css
@@ -1,5 +1,5 @@
 .navbar-custom {
-   background-color: #F8F8F8;
+   background-color: #F0F0F0;
    border-color: #E7E7E7;
 }
 
@@ -13,11 +13,11 @@
     background-color:#E7E7E7;
 }
 
-.panel0, .panel1, .panel2{
+.panel0, .panel1, .panel2, .panel3, .panel4{
     color: black;
 }
 
-.panel0:hover, .panel1:hover, .panel2:hover{
+.panel0:hover, .panel1:hover, .panel2:hover, .panel3:hover, .panel4:hover{
     color: black;
 }
 
@@ -30,4 +30,22 @@ body{
   line-height:1.5;
   background:url('../../assets/img/3.jpg');
 
+}
+
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 0px; /* Margin bottom by footer height */
+}
+
+.footer {
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #F0F0F0;
 }
